Add TypeScript support

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
 
-    <script src="lib/index.js" type="module"></script>
+    <script src="lib/index.ts" type="module"></script>
   </head>
   <body>
     <div class="loader">
