--- a/offline.html
+++ b/offline.html
@@ -10,7 +10,7 @@
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
 
-    <script src="lib/offline.js" type="module"></script>
+    <script src="lib/offline.ts" type="module"></script>
   </head>
   <body>
     <div class="loader">
