fix deployment to subfolders

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <title>Meshviewer - loading...</title>
 
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180" />
-    <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" href="./apple-touch-icon-180x180.png" sizes="180x180" />
+    <link rel="mask-icon" href="./mask-icon.svg" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
 
     <script src="lib/index.ts" type="module"></script>
