--- a/offline.html
+++ b/offline.html
@@ -5,9 +5,9 @@
     <title>Meshviewer Loading</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180" />
-    <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" href="./apple-touch-icon-180x180.png" sizes="180x180" />
+    <link rel="mask-icon" href="./mask-icon.svg" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
 
     <script src="lib/offline.ts" type="module"></script>
